feat(consent): add history tracking and statistics for user consents
- Introduced fields in the Consent message for tracking revocation details: `is_latest`, `revoked_at`, `revoked_reason`, and `revoked_by`.
- Implemented GetConsentHistory and GetConsentStats RPC methods in the ConsentService for retrieving consent history and statistics.
- Added corresponding request and response messages for GetConsentHistory and GetConsentStats.
- Updated the consent.proto and generated gRPC files to reflect the new methods and fields.
- Created database migrations to add history tracking fields to the user_consents table and set up necessary indexes for efficient querying.
- Implemented a DocumentClient for verifying document existence and retrieving policy information.
- Enhanced error handling in UserHandler for better clarity on validation and existence errors.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,11 +100,14 @@ services:
       - consent/.env
     environment:
       DATABASE_URL: postgres://postgres:postgres@postgres:5432/consent_db?sslmode=disable
+      DOCUMENT_SERVICE_URL: document_service:50051
     ports:
       - "50053:50053"
     depends_on:
       postgres:
         condition: service_healthy
+      document_service:
+        condition: service_started
     networks:
       - policy_network
 
